--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,18 @@ body {
   color: #272829;
 }
 
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid blue;
+  border-bottom: 16px solid blue;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+
 a {
   color: #0563bb;
   text-decoration: none;
